# sr

./: .gitignore  .gitmodules  CMakeLists.txt  OOP.md  README.md  ROADMAP.md  build-run.sh  f.spv  init.sh  rd_cap.cap  rebuild.sh  run-and-build.sh  shader-full.glsl  shader.glsl  shader.glsl.old  v.spv  vertex.glsl
examples/: shader-mouse-test.glsl  shader.glsl
src/: CMakeCache.txt  Makefile  cmake_install.cmake  fragment-shader.cpp  fragment-shader.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  vertex-shader.cpp  vertex-shader.h
